--- a/style.css
+++ b/style.css
@@ -1,3 +1,50 @@
 body {
   margin: 0;
 }
+
+#head {
+  height: 40px;
+}
+
+#body {
+  width: 100%;
+  overflow: hidden;
+}
+
+#body .inner {
+  width: 100%;
+  padding: 20px;
+  margin: 0 -20px;
+  box-shadow: inset 0 0 7px #333;
+  background: url("http://subtlepatterns.com/patterns/kindajean.png") repeat scroll 0 0 #EEE;
+}
+
+#flag {
+  height: 400px;
+  width: 960px;
+  background-color: white;
+  box-shadow: 1px 1px 5px #555;
+  margin: 40px auto;  
+  overflow: hidden;
+}
+
+#flag > * {
+  height: 400px;
+  float: left;
+}
+
+#flag .red {
+  width: 30px;
+  color: white;
+  background-color: #EF4135;
+}
+
+#flag .white {
+  width: 30px;
+}
+
+#flag .blue {
+  width: 900px;
+  color: white;
+  background-color: #0055A4;
+}
