--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ body {
 #flag {
   height: 400px;
   width: 960px;
-  background-color: white;
+  background-color: #EF4135;
   box-shadow: 1px 1px 5px #555;
   margin: 40px auto;  
   overflow: hidden;
@@ -56,6 +56,7 @@ body {
   -webkit-transition: width 1s; /* Safari and Chrome */
   -o-transition: width 1s; /* Opera */
   cursor: pointer;
+  position: relative;
 }
 
 #flag .red {
