--- a/style.css
+++ b/style.css
@@ -57,6 +57,7 @@ body {
   -o-transition: width 1s; /* Opera */
   cursor: pointer;
   position: relative;
+  overflow: hidden;
 }
 
 #flag .red {
@@ -66,6 +67,7 @@ body {
 
 #flag .white {
   color: #333;
+  background-color: white;
 }
 
 #flag .blue {
